--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,3 +25,22 @@
         url('../assets/glyphicons-halflings-regular.ttf') format('truetype'),
         url('../assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
  }
+
+ body {
+   padding-top: 70px;
+   padding-bottom: 30px;
+ }
+
+ .theme-dropdown .dropdown-menu {
+   position: static;
+   display: block;
+   margin-bottom: 20px;
+ }
+
+ .theme-showcase > p > .btn {
+   margin: 5px 0;
+ }
+
+ .theme-showcase .navbar .container {
+   width: auto;
+ }
