--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -25,10 +25,19 @@
         url('../assets/glyphicons-halflings-regular.ttf') format('truetype'),
         url('../assets/glyphicons-halflings-regular.svg#glyphicons_halflingsregular') format('svg');
  }
+ @font-face {
+   font-family: 'Roboto Regular';
+   src: url('../assets/Roboto-Regular.eot');
+   src: url('../assets/Roboto-Regular.eot?#iefix') format('embedded-opentype'),
+        url('../assets/Roboto-Regular.woff') format('woff'),
+        url('../assets/Roboto-Regular.ttf') format('truetype'),
+        url('../assets/Roboto-Regular.svg#Roboto-Regular') format('svg');
+ }
 
  body {
    padding-top: 70px;
    padding-bottom: 30px;
+   font-family: 'Roboto Regular';
  }
 
  .theme-dropdown .dropdown-menu {
