--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,15 +11,23 @@
   <body>
     <%= render "shared/navbar" %>
     <% if notice %>
-      <p class="notice"><%= notice %></p>
+      <div class="alert alert-success alert-dismissible fade in" role="alert">
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <i class="fa fa-times-circle" aria-hidden="true"></i>
+        </button>
+        <%= notice %>
+      </div>
     <% end %>
     <% if alert %>
-      <p class="alert"><%= alert %></p>
+    <div class="alert alert-danger alert-dismissible fade in" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">×</span>
+      </button>
+      <%= alert %>
+    </div>
     <% end %>
-    <div class="">
-      <div class="">
-        <%= yield %>
-      </div>
+    <div class="container-fluid">
+      <%= yield %>
     </div>
 
   </body>
