--- a/app/views/students/registrations/edit.html.erb
+++ b/app/views/students/registrations/edit.html.erb
@@ -34,7 +34,7 @@
           </div>
 
           <div class="actions">
-            <%= f.submit "Actualizar!", class:'btn btn-lg btn-success btn-block' %>
+            <%= f.submit "Actualizar!", class:'btn btn-lg btn-warning btn-block' %>
           </div>
           <% end %>
 
