--- a/app/views/students/registrations/new.html.erb
+++ b/app/views/students/registrations/new.html.erb
@@ -6,29 +6,39 @@
             <h3 class="panel-title">Registro de usuario</h3>
         </div>
         <div class="panel-body">
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <% resource.build_profile %>
+          <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= devise_error_messages! %>
 
-          <div class="form-group">
-            <%= f.label :email, 'Correo' %><br />
-            <%= f.email_field :email, autofocus: true, class:'form-control' %>
-          </div>
+          <%= f.simple_fields_for :profile do |ff| %>
+            <%= ff.input :name, label:'Nombre' %>
+            <%= ff.input :lastname, label:'Apellido' %>
+            <%= ff.input :document, label:'DNI' %>
+            <%= ff.input :birthdate, label:'Fecha de nacimiento',
+              as: :date_time_picker,
+              input_html:
+                { data:
+                  {
+                    date_format: "DD-MM-YYYY",
+                    date_max_date: Time.current.strftime('%Y-%m-%d'),
+                    date_view_mode: 'years',
+                    date_default_date: 18.years.ago.strftime('%Y-%m-%d')
+                  }
+                }
 
-          <div class="form-group">
-            <%= f.label :password, 'Contraseña' %>
-            <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> caracteres mínimo)</em>
-            <% end %><br />
-            <%= f.password_field :password, autocomplete: "off", class:'form-control' %>
-          </div>
+            %>
+          <% end %>
 
-          <div class="form-group">
-            <%= f.label :password_confirmation, 'Confirma contraseña' %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "off", class:'form-control' %>
+          <%= f.input :email, placeholder: 'user@domain.com' %>
+          <%= f.input :password, placeholder: '******' %>
+          <%= f.input :password_confirmation, placeholder: '******' %>
+
+          <div class="actions">
+            <%= f.button :submit, 'Regístrame!', class:false %>
           </div>
 
           <div class="actions">
-            <%= f.submit "Regístrame!", class:'btn btn-lg btn-success btn-block' %>
+            <%= f.submit "Regístrame!", class:'btn btn-lg btn-info btn-block' %>
           </div>
           <% end %>
 
